git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@11 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -58,11 +58,15 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 
 .ajax_success { margin: 2px 5px; color: Green; font-weight: bold; }
 
+/* Stany elementów */
+
 .hightlighted { background: yellow; }
 .hightlighted td { background: yellow !important; }
 
 .selected { background: red !important; }
 .selected td { background: red !important; }
+
+.inactive { color: grey; }
 
 /* Formatowanie adnotaci */
 #content { line-height: 140%; }
