--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -16,6 +16,8 @@ table tr.month_12 td { border-bottom: 1px solid black; }
 #filter_box li a { text-decoration: none; color: #aaa; }
 #filter_box li.active a { font-weight: bold; color: #444; }
 
+#fatal_error { border: 2px solid red; background: #FFA98A; font-size: 14px; margin: 10px; padding: 10px; clear: both; text-align: center; }
+
 .filter_menu ul { margin: 0px; padding: 0px; }
 .filter_menu li { list-style: none; margin-left: 0px; padding-left: 0px; }
 .filter_menu a { color: gray; background: transparent !important; }
