git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@50 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -155,3 +155,5 @@ table.formated th { background: white; }
 .ontology b { color: #3C81D9; }
 .ontology em { color: darkred; }
 .ontology code { font-weight: bold;  }
+
+.samples code { color: darkred; }
