--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -97,7 +97,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 #content span { border-bottom: 2px solid red; cursor: default;}
 #content small.hightlighted { background: khaki; }
 #content span.hightlighted { background: yellow; }
-#content small { vertical-align: top; color: gray; padding: 2px; cursor: default;}
+#content small { vertical-align: top; color: gray; padding: 2px; cursor: default;display: none; }
 
 #content span.amount { border-color: GreenYellow; }
 #content span.company { border-color: SteelBlue; }
