--- a/public_html/js/markitup/skins/markitup/style.css
+++ b/public_html/js/markitup/skins/markitup/style.css
@@ -13,8 +13,7 @@
 }
 .markItUp  {
 	width:700px;
-	margin:5px 0 5px 0;
-	border:5px solid #F5F5F5;	
+	margin:5px;
 }
 .markItUpContainer  {
 	border:1px solid #3C769D;	
