Dodanie przycisków do edytora dla <corr> i <lb/>.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@90 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/js/markitup/sets/default/style.css
+++ b/public_html/js/markitup/sets/default/style.css
@@ -25,3 +25,6 @@
 .markItUp .preview a {
 	background-image:url(images/preview.png);
 }
+.markItUp .bug a {
+	background-image:url(images/bug.png);
+}
