--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -104,39 +104,41 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 .inactive { color: grey; }
 
 /* Formatowanie adnotaci */
-#content { line-height: 140%; }
+#content { line-height: 160%; }
 // span { border-bottom: 2px solid red; cursor: default;}
 #content small.hightlighted { background: khaki; }
  span.hightlighted { background: yellow; }
 #content small { vertical-align: top; color: gray; padding: 2px; cursor: default;display: none; }
 
-.annotations span { border-bottom: 1px solid red; }
- span.alias { border-bottom: 1px dashed Red; }
- span.amount { border-bottom: 2px solid GreenYellow; }
- span.company { border-bottom: 2px solid SteelBlue; }
- span.company_short { border-bottom: 2px solid LightSteelBlue; }
- span.company_alias { border-bottom: 1px dashed LightSteelBlue; }
- span.date { border-bottom: 2px solid Gold; }
- span.person { border-bottom: 2px solid PeachPuff; color: red; font-weight: bold;  }
- span.person_alt { border-bottom: 1px dashed PeachPuff; color: red; }
- span.institution { border-bottom: 2px solid MediumOrchid; }
- span.location { border-bottom: 2px solid YellowGreen; }
- span.city { border-bottom: 2px solid YellowGreen; }
- span.street { border-bottom: 2px solid YellowGreen; }
- span.house_num { border-bottom: 2px solid YellowGreen; }
- span.postal { border-bottom: 2px solid YellowGreen; }
- span.proper_noun { border-bottom: 2px solid MediumVioletRed; }
- span.document_reference { border-bottom: 2px solid SaddleBrown; }
- span.document_name { border-bottom: 2px solid Chocolate; }
- span.proper_name_acronym { border-bottom: 2px solid LawnGreen; }
- span.code { border-bottom: 2px solid Purple; }
+.annotations span { border-bottom: 1px solid red; border-bottom-width: 2px; }
+.annotations span span { padding-bottom: 3px; }
+.annotations span span span{ padding-bottom: 6px; }
+span.alias { border-bottom-color: Red; }
+ span.amount { border-bottom-color: GreenYellow; }
+ span.company { border-bottom-color: SteelBlue; }
+ span.company_short { border-bottom-color: LightSteelBlue; }
+ span.company_alias { border-bottom-color: LightSteelBlue; }
+ span.date { border-bottom-color: Gold; }
+ span.person { border-bottom-color: PeachPuff; color: red; font-weight: bold;  }
+ span.person_alt { border-bottom-color: PeachPuff; color: red; }
+ span.institution { border-bottom-color: MediumOrchid; }
+ span.location { border-bottom-color: YellowGreen; }
+ span.city { border-bottom-color: YellowGreen; }
+ span.street { border-bottom-color: YellowGreen; }
+ span.house_num { border-bottom-color: YellowGreen; }
+ span.postal { border-bottom-color: YellowGreen; }
+ span.proper_noun { border-bottom-color: MediumVioletRed; }
+ span.document_reference { border-bottom-color: SaddleBrown; }
+ span.document_name { border-bottom-color: Chocolate; }
+ span.proper_name_acronym { border-bottom-color: LawnGreen; }
+ span.code { border-bottom-color: Purple; }
 
 #content.takipi span.w { border: 1px solid #ddd; line-height: 22px; background: #f5f5f5; padding: 0px 2px; } 
 #content.takipi span.hightlighted { background: yellow; }
 #content.takipi span.marked { background: Chocolate; }
 #content.takipi span.ann { border-width: 2px; line-height: 22px; padding: 2px;} 
 
-#content span.selected { background: red !important; }
+#content span.selected { background: #FF837E !important; border-top: 1px solid #BF1616 !important; }
 
 /****
  * Powtarzalne elementy strony
@@ -171,3 +173,5 @@ table.formated th { background: white; }
 .ontology code { font-weight: bold;  }
 
 .samples code { color: darkred; }
+
+.annotation_list { height: 400px; overflow: scroll}
