--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -110,9 +110,9 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
  span.hightlighted { background: yellow; }
 #content small { vertical-align: top; color: gray; padding: 2px; cursor: default;display: none; }
 
-.annotations span { border-bottom: 1px solid red; border-bottom-width: 2px; }
-.annotations span span { padding-bottom: 3px; }
-.annotations span span span{ padding-bottom: 6px; }
+.annotations span { border-bottom: 1px solid red; border-bottom-width: 1px; }
+.annotations span span { padding-bottom: 2px; }
+.annotations span span span{ padding-bottom: 4px; }
 span.alias { border-bottom-color: Red; }
  span.amount { border-bottom-color: GreenYellow; }
  span.company { border-bottom-color: SteelBlue; }
@@ -133,8 +133,8 @@ span.alias { border-bottom-color: Red; }
  span.proper_name_acronym { border-bottom-color: LawnGreen; }
  span.code { border-bottom-color: Purple; }
 
- span.organizational_board_ne { border-bottom: 2px dashed Purple; }
- span.object_ne { border-bottom: 2px dashed Blue; }
+ span.organizational_board_ne { border-bottom: 2px dotted Purple; }
+ span.object_ne { border-bottom: 2px dotted Blue; }
 
 #content.takipi span.w { border: 1px solid #ddd; line-height: 22px; background: #f5f5f5; padding: 0px 2px; } 
 #content.takipi span.hightlighted { background: yellow; }
