--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -115,7 +115,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 .annotations span span span{ padding-bottom: 5px; }
 span.alias { border-bottom-color: Red; }
  span.amount { border-bottom-color: GreenYellow; }
- span.company { border-bottom-color: SteelBlue; }
+ span.company_nam { border-bottom-color: SteelBlue; }
  span.company_short { border-bottom-color: LightSteelBlue; }
  span.company_alias { border-bottom-color: LightSteelBlue; }
  span.date { border-bottom-color: Gold; }
@@ -133,6 +133,7 @@ span.alias { border-bottom-color: Red; }
  span.proper_name_acronym { border-bottom-color: LawnGreen; }
  span.code { border-bottom-color: Purple; }
 
+ span.company { border-bottom: 2px dotted SteelBlue; }
  span.organizational_board_ne { border-bottom: 2px dotted Purple; }
  span.object_ne { border-bottom: 2px dotted Blue; }
 
