git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@98 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -134,7 +134,7 @@ span.alias { border-bottom-color: Red; }
  span.code { border-bottom-color: Purple; }
 
  span.company { border-bottom: 2px dotted SteelBlue; }
- span.organizational_board_ne { border-bottom: 2px dotted Purple; }
+ span.organizational_board { border-bottom: 2px dotted Purple; }
  span.object_ne { border-bottom: 2px dotted Blue; }
 
 #content.takipi span.w { border: 1px solid #ddd; line-height: 22px; background: #f5f5f5; padding: 0px 2px; } 
