Changes in layout.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@141 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/custom-theme/jquery-ui-1.7.2.custom.css
+++ b/public_html/css/custom-theme/jquery-ui-1.7.2.custom.css
@@ -48,7 +48,7 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Verdana,Arial,sans-serif; font-size: 1.1em; }
+.ui-widget { font-family: Verdana,Arial,sans-serif; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #e0cfc2; color: #1e1b1d; background-color: white; }
 .ui-widget-content a { color: #1e1b1d; }
