--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -1,5 +1,4 @@
-body { font-family: Verdana,Arial,sans-serif; font-size: 10px; }
-body { margin: 0px; padding: 0px; background: tan; }
+body { font-family: arial,sans-serif; font-size: 12px; margin: 0px; padding: 0px; background: #A5CC8F; }
 
 p { margin: 0px; }
 
@@ -29,10 +28,11 @@ table tr.month_12 td { border-bottom: 1px solid black; }
 #console dd { margin-left: 30px; } 
 #console_margin { height: 80px; }
 
-.filter_menu ul { margin: 0px; padding: 0px; }
-.filter_menu li { list-style: none; margin-left: 0px; padding-left: 0px; }
-.filter_menu a { color: gray; background: transparent !important; }
-.filter_menu a.selected { color: blue; background: transparent !important; }
+#filter_menu { }
+#filter_menu ul { margin: 0px; padding: 0px; }
+#filter_menu li { list-style: none; margin-left: 0px; padding-left: 0px; }
+#filter_menu a { color: gray; background: transparent !important; }
+#filter_menu a.selected { color: blue; background: transparent !important; }
 
 em { font-style: normal; color: darkred; font-weight: bold;  }
 
@@ -40,6 +40,12 @@ em { font-style: normal; color: darkred; font-weight: bold;  }
 
 .total_count { font-size: 18px; font-weight: bold; text-align: center; margin: 10px; padding: 5px; background: white; border: 1px solid rgb(132,190,45); color: blue; }
 .total_count small { font-size: 10px; font-weight: normal; color: grey; }
+
+#logo { 
+	float: right; 
+	margin-right: 10px;
+}
+#logo a img { border-width: 0; }
 
 #menu_box { float: left; padding: 4px; }
 #menu_box ul { margin: 0px; padding: 4px; }
@@ -50,7 +56,7 @@ em { font-style: normal; color: darkred; font-weight: bold;  }
 .row_even a { color: #555; }
 .row_odd a { color: #555; }
 .formated .row_even_ok td { background: #C9FFB2; }
-.formated .row_odd_ok td { background: #C9FFB2; }
+.formated .row_odd_ok td { background: #E6FFDF; }
 .formated .row_even_notok td { background: #FFA98A; }
 .row_even_formated td { background: #fc8; }
 .row_odd_formated td { background: #ffe4bf; }
@@ -68,20 +74,43 @@ dl dd { margin-left: 100px; line-height: 2em;}
 /* 
  * Stałe i unikalne elementy strony 
  */
-#main_menu { background: white; font-size: 1.1em; font-weight: bold; }
+#main_menu { 
+	margin: 10px; 
+	background: white; 
+	font-size: 1.1em; 
+	font-weight: bold; 
+	margin-bottom: 2px;
+	border: 1px solid #667A55; 
+}
 #main_menu ul { margin: 0px; padding: 6px 0px; }
 #main_menu li { display: inline; margin: 0px; padding: 6px 6px; }
-#main_menu .active { background: #F26205; color: white; }
+#main_menu .active { background: #727DB2; color: white; }
 #main_menu .active a { color: white; } 
 
-#sub_menu { background: #ffe5b3; border-bottom: 1px solid #444444; font-size: 1.1em; border-top: 5px solid #F26205; }
+#sub_menu { 
+	background: white; 
+	margin: 10px; margin-top: 0; 
+	border: 1px solid #667A55; 
+}
 #sub_menu ul { margin: 0px; padding: 2px 0px; }
 #sub_menu li { display: inline; margin: 0px; padding: 2px 6px; }
-#sub_menu .active { background: #F26205; color: white; }
+#sub_menu .active { background: #727DB2; color: white; }
 #sub_menu .active a { color: white; } 
+
+#content {
+	margin: 10px;
+	border: 1px solid #667A55;
+	background: white; 
+	padding: 5px;
+}
 
 #filter_box { border-bottom: 1px solid #555; background: #eee; }
 #filter_box input { vertical-align: bottom; }
+
+#footer { 
+	margin: 0 10px; 
+	text-align: right; 
+}
 
 .pagging { margin: 2px 0px; padding: 2px; }
 .pagging a { width: 40px; text-decoration: none; padding: 0px 5px; background: white; }
