Page with user activity preview.
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@143 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -137,7 +137,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 // span { border-bottom: 2px solid red; cursor: default;}
 #content small.hightlighted { background: khaki; }
  span.hightlighted { background: yellow; }
-#content small { vertical-align: top; color: gray; padding: 2px; cursor: default;display: none; }
+#content small { color: gray; }
 
 .annotations span { border-bottom: 1px solid red; border-bottom-width: 1px; padding-left: 3px;}
 .annotations span span { padding-bottom: 3px; padding-left: 0px;}
