Fix of #content
git-svn-id: svn://nlp.pwr.wroc.pl/czuk/gpw/web@145 73ad06da-0985-4a90-93d2-e6fe430330fc

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -97,7 +97,7 @@ dl dd { margin-left: 100px; line-height: 2em;}
 #sub_menu .active { background: #727DB2; color: white; }
 #sub_menu .active a { color: white; } 
 
-#content {
+#page_content {
 	margin: 10px;
 	border: 1px solid #667A55;
 	background: white; 
@@ -161,6 +161,7 @@ span.alias { border-bottom-color: Red; }
  span.document_name { border-bottom-color: Chocolate; }
  span.proper_name_acronym { border-bottom-color: LawnGreen; }
  span.code { border-bottom-color: Purple; }
+ span.nam { background: lightgreen; }
 
  span.company { border-bottom: 2px dotted SteelBlue; }
  span.organizational_board { border-bottom: 2px dotted Purple; }
