--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -162,6 +162,7 @@ span.alias { border-bottom-color: Red; }
  span.proper_name_acronym { border-bottom-color: LawnGreen; }
  span.code { border-bottom-color: Purple; }
  span.nam { background: lightgreen; }
+ span.person_nam { background: #FFFAA9; }
 
  span.company { border-bottom: 2px dotted SteelBlue; }
  span.organizational_board { border-bottom: 2px dotted Purple; }
