--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -12,6 +12,8 @@
  span.top_an { background: #F8DAE2; padding: 1px; border-width: 0; }
  span.person { background: #F8DAE2; padding: 1px; border-width: 0; }
  span.company { background: #F8DAE2; padding: 1px; border-width: 0; }
+ span.entity { background: #F8DAE2; padding: 1px; border-width: 0; }
+ span.location { background: #F8DAE2; padding: 1px; border-width: 0; }
 
 span.alias { border-bottom-color: Red; }
  span.amount { border-bottom-color: GreenYellow; }
