--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -125,7 +125,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 
 /* Stany elementów */
 
-.hightlighted { background: yellow; }
+.hightlighted { background: yellow !important; }
 .hightlighted td { background: yellow !important; }
 
 .selected { background: red !important; }
@@ -147,6 +147,7 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 
 #content span.selected { background: #FF837E !important; border-top: 1px solid #BF1616 !important; }
 
+#content.annotations { padding-bottom: 40px !important}
 /****
  * Powtarzalne elementy strony
  */
