--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -18,6 +18,8 @@
  span.location { background: LightBlue; padding: 1px; border-width: 0; }
  span.facility { background: LightPink; padding: 1px; border-width: 0; }
  span.geopolitical { background: LightGreen; padding: 1px; border-width: 0; }
+ span.timex { background: #D1EEEE; padding: 1px; border-width: 0; }
+ span.product { background: #EEC900; padding: 1px; border-width: 0; }
 
  span.alias { border-bottom-color: Red; }
  span.amount { border-bottom-color: GreenYellow; }
